# esdm-client

./: .clang-format  default.nix  esdmRpcFuntions.hpp  functions.hpp  helper.hpp  main.cpp  meson.build  mesonReconfigureAndBuild.sh  meson_options.txt  miscFunctions.hpp  plotBenchmark.py  shell.nix  unitTests.cpp  writer.hpp
nix/: sources.json
